Finished MTI lectures 1,2,3

--- a/Complex Function Theory/testlecture.tex
+++ b/Complex Function Theory/testlecture.tex
@@ -1,6 +1,10 @@
-\documentclass[twocolumn, 10pt]{article}
-\usepackage{amsmath}
+\documentclass[a4paper, 12pt, twoside]{article}
+\usepackage[left = 3cm, right = 3cm]{geometry}
+\usepackage[english]{babel}
+\usepackage[utf8]{inputenc}
 \usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{multicol}
 
 \author{jdRanda}
 \title{Lecture 1}
