First 2 sections of CFT

--- a/Intro To Ai/ItAI.tex
+++ b/Intro To Ai/ItAI.tex
@@ -1,13 +1,19 @@
-\documentclass[10pt]{article}
+\documentclass[a4paper, 12pt, twoside]{article}
+\usepackage[left = 3cm, right = 3cm]{geometry}
+\usepackage[english]{babel}
+\usepackage[utf8]{inputenc}
+\usepackage{amssymb}
+\usepackage{amsmath}
+\usepackage{amsthm}
+\usepackage{multicol}
+% thanks tyler
 
 \author{jdRanda}
-\title{Lecture 1}
-
-
+\title{Intro to AI}
 
 \begin{document}
     \maketitle
-
+    \newpage
 
     \section{Machine Learning}
         A program is said to learn from experiance E with respect to some task(s) T and
