Finished Set theory hw 1

--- a/Set Theory/ST.tex
+++ b/Set Theory/ST.tex
@@ -25,7 +25,7 @@ $$ \forall x,[x\in A\Rightarrow x\in B]$$
 For any sets $x,y$ there is a set $z=\{x,y\}$ with elements just $x$ and $y$. $z$ is called the \emph{(unordered) pair set of $x,y$}.
 \textit{NB: If $x=y$ then we have $\{x,y\}=\{x,x\}=\{x\}$}
 \subsection*{Definition 1.1}
-Let $\mathcal{P}(x)$ denote the class $\{y\subset x$, called the \emph{Power set of $x$}.
+Let $\mathcal{P}(x)$ denote the class $\{y|y\subseteq x\}$, called the \emph{Power set of $x$}.
 \subsection*{Definition 1.2}
 The \emph{Empty Set}, denoted $\emptyset$, is the unique set with no elements.
 \begin{itemize}
@@ -108,7 +108,7 @@ $$\forall x,y (x,y\in X\Rightarrow (x=y\vee x\prec y\vee y\prec x)) $$
 \subsection*{Definition 1.15}
 \begin{itemize}
     \item[i)]$(A,\prec)$ is a wellordering if it is a string total orderings and for any subset $Y\subseteq A$, $Y\neq \emptyset\Rightarrow Y$ has a $\prec$-least element. We write $(A,\prec)\in WO$
-    item[ii)] A partial ordering $R$ on a set $A$, $(A,R)$ is a wellfounded relation if for any subset $Y\subseteq A$, $Y\neq \emptyset\Rightarrow Y$ has an $R$-minimal element.
+    \item[ii)] A partial ordering $R$ on a set $A$, $(A,R)$ is a wellfounded relation if for any subset $Y\subseteq A$, $Y\neq \emptyset\Rightarrow Y$ has an $R$-minimal element.
 \end{itemize}
 
 
